tests/fixtures/guardrails/invalid/route-dynamic-imports-domain/app/routes/products.ts
export async function action() {
  return import("~/domain/products/write.server");
}
